--- a/Taux_d'attrition.ipynb
+++ b/Taux_d'attrition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkrvEYN8IE9z0ln6qrGstM",
+      "authorship_tag": "ABX9TyNcDMeP6Ehx8fFfgOFj7X4g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1421,22 +1421,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Apply OneHotEncoder\n",
-        "# The 'sparse' argument was deprecated in version 1.0 and removed in version 1.2.\n",
-        "# Replace it with 'sparse_output=False' if you're using a newer scikit-learn version.\n",
-        "encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')  # Setting handle_unknown='ignore' to handle unseen values during prediction\n",
+        "# Appliquer OneHotEncoder\n",
+        "\n",
+        "#L'argument 'sparse' a été déprécié dans la version 1.0 et supprimé dans la version 1.2.\n",
+        "#Remplacez-le par 'sparse_output=False' si vous utilisez une version plus récente de scikit-learn.\n",
+        "encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
         "encoded_data = encoder.fit_transform(df[categorical_cols])\n",
         "\n",
-        "# Create a DataFrame from the encoded data\n",
+        "# Création d'un dataFrame pour les données encodé\n",
         "encoded_df = pd.DataFrame(encoded_data, columns=encoder.get_feature_names_out(categorical_cols))\n",
         "\n",
-        "# Drop the original categorical columns from the DataFrame\n",
+        "\n",
         "df.drop(columns=categorical_cols, inplace=True)\n",
         "\n",
-        "# Reset index of the DataFrame\n",
+        "# Réinitialiser l'indice du nouveau DataFrame\n",
         "df.reset_index(drop=True, inplace=True)\n",
         "\n",
-        "# Concatenate the original DataFrame with the encoded DataFrame\n",
         "df = pd.concat([df, encoded_df], axis=1)"
       ],
       "metadata": {
@@ -2139,10 +2139,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# split data into X and y\n",
+        "\n",
         "X = df.drop('Churn', axis=1)\n",
         "y = df['Churn']\n",
-        "# data into train and split\n",
+        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
       ],
       "metadata": {
@@ -2154,79 +2154,79 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initialize an empty list to store model scores\n",
+        "\n",
         "model_scores = []\n",
         "\n",
-        "# Create a list of models to evaluate\n",
+        "\n",
         "models = [\n",
         "    ('Random Forest', RandomForestClassifier(random_state=42),\n",
         "        {'model__n_estimators': [50, 100, 200],\n",
-        "         'model__max_depth': [None, 10, 20]}),  # Add hyperparameters for Random Forest\n",
+        "         'model__max_depth': [None, 10, 20]}),  # Ajout de paramétre pour le Random Forest\n",
         "    ('Gradient Boosting', GradientBoostingClassifier(random_state=42),\n",
         "        {'model__n_estimators': [50, 100, 200],\n",
-        "         'model__learning_rate': [0.05, 0.1, 0.5]}),  # Add hyperparameters for Gradient Boosting\n",
+        "         'model__learning_rate': [0.05, 0.1, 0.5]}),  #Ajout de paramétre pour le  Gradient Boosting\n",
         "    ('Support Vector Machine', SVC(random_state=42, class_weight='balanced'),\n",
         "        {'model__C': [0.1, 1, 10],\n",
-        "         'model__gamma': ['scale', 'auto']}),  # Add hyperparameters for SVM\n",
+        "         'model__gamma': ['scale', 'auto']}),  # Ajout de paramétre pour la SVM\n",
         "    ('Logistic Regression', LogisticRegression(random_state=42, class_weight='balanced'),\n",
         "        {'model__C': [0.1, 1, 10],\n",
-        "         'model__penalty': ['l1', 'l2']}),  # Add hyperparameters for Logistic Regression\n",
+        "         'model__penalty': ['l1', 'l2']}),  # Ajout de paramétre pour la  Regression Logistique\n",
         "    ('K-Nearest Neighbors', KNeighborsClassifier(),\n",
         "        {'model__n_neighbors': [3, 5, 7],\n",
-        "         'model__weights': ['uniform', 'distance']}),  # Add hyperparameters for KNN\n",
+        "         'model__weights': ['uniform', 'distance']}),  # Ajout de paramétre pour la KNN\n",
         "     ('Decision Tree', DecisionTreeClassifier(random_state=42),\n",
         "        {'model__max_depth': [None, 10, 20],\n",
-        "         'model__min_samples_split': [2, 5, 10]}),  # Add hyperparameters for Decision Tree\n",
+        "         'model__min_samples_split': [2, 5, 10]}),  # Ajout de paramétre pour l'arbre de décision\n",
         "    ('Ada Boost', AdaBoostClassifier(random_state=42),\n",
         "        {'model__n_estimators': [50, 100, 200],\n",
-        "         'model__learning_rate': [0.05, 0.1, 0.5]}),  # Add hyperparameters for Ada Boost\n",
+        "         'model__learning_rate': [0.05, 0.1, 0.5]}),  # Ajout de paramétre pour  Ada Boost\n",
         "    ('XG Boost', XGBClassifier(random_state=42),\n",
         "        {'model__n_estimators': [50, 100, 200],\n",
-        "         'model__learning_rate': [0.05, 0.1, 0.5]}),  # Add hyperparameters for XG Boost\n",
-        "    ('Naive Bayes', GaussianNB(), {})  # No hyperparameters for Naive Bayes\n",
+        "         'model__learning_rate': [0.05, 0.1, 0.5]}),  # Ajout de paramétre pour  XG Boost\n",
+        "    ('Naive Bayes', GaussianNB(), {})\n",
         "]\n",
         "\n",
         "best_model = None\n",
         "best_accuracy = 0.0\n",
         "\n",
-        "# Iterate over the models and evaluate their performance\n",
+        "# Evaluer la performance des modèles\n",
         "for name, model, param_grid in models:\n",
-        "    # Create a pipeline for each model\n",
+        "    # Création d'un pipeline pour chaque modèle\n",
         "    pipeline = Pipeline([\n",
-        "        ('scaler', MinMaxScaler()),  # Feature Scaling\n",
+        "        ('scaler', MinMaxScaler()),\n",
         "        ('model', model)\n",
         "    ])\n",
         "\n",
-        "    # Hyperparameter tuning using GridSearchCV\n",
+        "    #Réglage des hyperparamètres avec GridSearchCV\n",
         "    if param_grid:\n",
         "        grid_search = GridSearchCV(pipeline, param_grid, cv=2)\n",
         "        grid_search.fit(X_train, y_train)\n",
         "        pipeline = grid_search.best_estimator_\n",
         "\n",
-        "    # Fit the pipeline on the training data\n",
+        "    # Ajuster le pipeline sur les données d'entraînement.\n",
         "    pipeline.fit(X_train, y_train)\n",
         "\n",
-        "    # Make predictions on the test data\n",
+        "    # Faire des prédiction sur la donnée test\n",
         "    y_pred = pipeline.predict(X_test)\n",
         "\n",
-        "    # Calculate accuracy score\n",
+        "    # Calculer le score de précision\n",
         "    accuracy = accuracy_score(y_test, y_pred)\n",
         "\n",
-        "    # Append model name and accuracy to the list\n",
+        "    # Ajouter le nom du modèle et sa précision à la liste.\n",
         "    model_scores.append({'Model': name, 'Accuracy': accuracy})\n",
         "\n",
-        "    # Convert the list to a DataFrame\n",
+        "    # Convertir la liste en DataFrame\n",
         "    scores_df = pd.DataFrame(model_scores)\n",
-        "    # Print the performance metrics\n",
+        "\n",
         "    print(\"Model:\", name)\n",
         "    print(\"Test Accuracy:\", round(accuracy, 3),\"%\")\n",
         "    print()\n",
-        "    # Check if the current model has the best accuracy\n",
+        "    # Vérifier si le modèle actuel a la meilleure précision\n",
         "    if accuracy > best_accuracy:\n",
         "        best_accuracy = accuracy\n",
         "        best_model = pipeline\n",
         "\n",
-        "# Retrieve the overall best model\n",
+        "# Récupérer le meilleur modèle global\n",
         "print(\"Best Model:\")\n",
         "print(\"Test Accuracy:\", best_accuracy)\n",
         "print(\"Model Pipeline:\", best_model, \"with accuracy\", round(best_accuracy, 2), \"%\")"
@@ -2236,9 +2236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TgQsK_zIdZvQ",
-        "outputId": "2fe7baf1-523a-4867-84e7-9283cd9fcadd"
+        "outputId": "bdc9251b-2349-4d7e-be5f-5f0fbe48c7b0"
       },
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
